Create ressource section

--- a/Doc/PlanGestionDonnees.Rmd
+++ b/Doc/PlanGestionDonnees.Rmd
@@ -92,3 +92,7 @@ Identifier données primaires et secondaires.
 ## Conformitéé éthique et juridique
 
 ### Protection de la confidentialité
+
+## Ressources connexes
+
+* [ICPSR](www.icpsr.umich.edu)
